syntax = "proto3";

package mosaic;

service Communication {
  // Remote protocol to handle global model requests.
  rpc GetGlobalModel(ClientMessage) returns (ServerModel);
  // Remote protocol for sending local model to server.
  rpc Update(ClientUpdate) returns (ServerMessage);
  // Remote protocol for sending global meta data regarding the process.
  // rpc SetGlobalMeta(GlobalMeta) returns (ServerMessage);
}

message Parameters {
  // The weights and biases content of a model.
  bytes tensor = 1;
  // The data type which sets how the bytes will be decoded.
  string data_type = 2;
  // The model version that defines the training round of the model.
  uint32 model_version = 3;
}

message ProcessMeta {
  // Current trainings round.
  uint32 round_id = 1;
  // Local running loss for the current trainings round.
  float	loss = 2;
}

message GlobalMeta {
  float acc = 1;
}

message ServerMessage {
  // Returns status code regarding update message.
  uint32 status = 1;
}

message ServerModel {
  // Parameters that contain the model and some metadata from the server.
  Parameters parameters = 1;
  // Status status = 2;
}

message ClientMessage {
  // Client ID.
  uint32 id = 1;
}

message ClientUpdate {
  // Client ID.
  uint32 id = 1;
  // Parameters that contain the model and some metadata from the client.
  Parameters parameters = 2;
  // Weight factor: number of samples the current local model was trained on.
  uint32 stake = 3;
  // Meta data within the local training process.
  ProcessMeta process_meta = 4;
}

// message Status {
//   // An error code that can be handled by the client.
//   // The actual error code is defined by `google.rpc.Code`.
//   int32 code = 1;

//   // A developer-facing human-readable error message. It explains the error
//   // and offers an actionable resolution to it.
//   string message = 2;
// }
